@@ -24,6 +24,7 @@ WinMerge 2.11.1.9
   Bugfix: Creating new files caused message about missing files (#2515875)
   Bugfix: Could not hide folders in recursive compare (#2528749)
   Bugfix: Folder Compare:Copy Right/Left don't create folder
+  Bugfix: Must Show Different to Show L/R Unique (#2129561)
   Translation updates:
   - Brazilian (#2461443, #2524796)
   - Chinese Traditional (#2540115)
